--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="keyword" content="spoil u nails & salon, nails salon, nails salon near me, nails in fayetteville, nails in arkansas, luxury nails, best nails color, nails spa, nails salon, nails bar, perfect nail, nails polish, gel polish, acrylics, nails company, best nail color,nude nail colors, nail design, hight-end service nail in arkansas, luxury nails in arkansas, nails salon in arkansas, nails spa near me, nails salon near me, manicure, acrylic paint, pedicure near me, nail bar near me, nail salon in arkansas 72701, nail salon 72701, hot nails, top nail salon, nail salon in boston, boston, best nail salon in boston, best nail salon in arkansas, hottest nails design, hot nails design, top nails design, the best nails salon in, top nails salon in">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
