--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Spoil U Nails & Spa</title>
+    <title>Spoil U Nails & Spa | Gallery</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -57,9 +57,6 @@
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Promotion</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==">Appointment</a>
               </li>
             </ul>
@@ -69,7 +66,7 @@
     </header>
 
     <!-- Page Content -->
-    <div class="page-heading products-heading header-text"  style="background-image: url(assets/images/cover-02.jpg);">
+    <div class="page-heading products-heading header-text"  style="background-image: url(assets/images/spoil-u-nails-cover-02.jpg);">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -98,11 +95,11 @@
                 <div class="row grid">
                     <div class="col-lg-4 col-md-4 all des">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/ourservice/image-1.jpg" alt=""></a>
+                        <a href="#"><img src="assets/images/ourservice/spoil-u-nails-image-1.jpg" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Tittle goes here</h4></a>
-                          <h6>$18.25</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                          <a href="#"><h4></h4></a>
+                          <h6></h6>
+                          <p></p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
@@ -110,17 +107,17 @@
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
                           </ul>
-                          <span>Reviews (12)</span>
+                          <span></span>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-4 all dev">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/ourservice/image-2.jpg" alt=""></a>
+                        <a href="#"><img src="assets/images/ourservice/spoil-u-nails-image-2.jpg" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Tittle goes here</h4></a>
-                          <h6>$16.75</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                          <a href="#"><h4></h4></a>
+                          <h6></h6>
+                          <p></p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
@@ -128,17 +125,17 @@
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
                           </ul>
-                          <span>Reviews (24)</span>
+                          <span></span>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-4 all gra">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/ourservice/image-3.jpg" alt=""></a>
+                        <a href="#"><img src="assets/images/ourservice/spoil-u-nails-image-3.jpg" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Tittle goes here</h4></a>
-                          <h6>$32.50</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                          <a href="#"><h4></h4></a>
+                          <h6></h6>
+                          <p></p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
@@ -146,17 +143,17 @@
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
                           </ul>
-                          <span>Reviews (36)</span>
+                          <span></span>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-4 all gra">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/ourservice/image-4.jpg" alt=""></a>
+                        <a href="#"><img src="assets/images/ourservice/spoil-u-nails-image-4.jpg" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Tittle goes here</h4></a>
-                          <h6>$24.60</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                          <a href="#"><h4></h4></a>
+                          <h6></h6>
+                          <p></p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
@@ -164,17 +161,17 @@
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
                           </ul>
-                          <span>Reviews (48)</span>
+                          <span></span>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-4 all dev">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/ourservice/image-5.jpg" alt=""></a>
+                        <a href="#"><img src="assets/images/ourservice/spoil-u-nails-image-5.jpg" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Tittle goes here</h4></a>
-                          <h6>$18.75</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                          <a href="#"><h4></h4></a>
+                          <h6></h6>
+                          <p></p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
@@ -182,17 +179,17 @@
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
                           </ul>
-                          <span>Reviews (60)</span>
+                          <span></span>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-4 all des">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/ourservice/image-6.jpg" alt=""></a>
+                        <a href="#"><img src="assets/images/ourservice/spoil-u-nails-image-6.jpg" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Tittle goes here</h4></a>
-                          <h6>$12.50</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                          <a href="#"><h4></h4></a>
+                          <h6></h6>
+                          <p></p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
@@ -200,7 +197,7 @@
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
                           </ul>
-                          <span>Reviews (72)</span>
+                          <span></span>
                         </div>
                       </div>
                     </div>
