--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Us</a>
               <li class="nav-item">
-                <a class="nav-link" href="#promotion">Promotion</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==">Appointment</a>
               </li>
             </ul>
@@ -75,19 +72,19 @@
     <!-- Banner Starts Here -->
     <div class="banner header-text">
       <div class="owl-banner owl-carousel">
-        <div class="banner-item-01" style="background-image: url(assets/images/cover-01.jpg);">
+        <div class="banner-item-01" style="background-image: url(assets/images/spoil-u-nails-cover-01.jpg);">
           <div class="text-content">
             <h4></h4>
             <h2></h2>
           </div>
         </div>
-        <div class="banner-item-01" style="background-image: url(assets/images/cover-02.jpg);">
+        <div class="banner-item-01" style="background-image: url(assets/images/spoil-u-nails-cover-02.jpg);">
           <div class="text-content">
             <h4></h4>
             <h2></h2>
           </div>
         </div>
-        <div class="banner-item-03" style="background-image: url(assets/images/cover-03.jpg);">
+        <div class="banner-item-03" style="background-image: url(assets/images/spoil-u-nails-cover-03.jpg);">
           <div class="text-content">
             <h4></h4>
             <h2></h2>
@@ -104,17 +101,17 @@
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Specialties</h2>
-              <a href="products.html">view all service <i class="fa fa-angle-right"></i></a>
+              <h2>Special</h2>
+              <a href="products.html">View all service <i class="fa fa-angle-right"></i></a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/image-1.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-1.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$25.75</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="#"><h4></h4></a>
+                <h6></h6>
+                <p></p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -122,17 +119,17 @@
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
                 </ul>
-                <span>Reviews (24)</span>
+                <span></span>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/image-2.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-2.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$30.25</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="#"><h4></h4></a>
+                <h6></h6>
+                <p></p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -140,17 +137,17 @@
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
                 </ul>
-                <span>Reviews (21)</span>
+                <span></span>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/image-3.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-3.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$20.45</h6>
-                <p>Sixteen Clothing is free CSS template provided by TemplateMo.</p>
+                <a href="#"><h4></h4></a>
+                <h6></h6>
+                <p></p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -158,17 +155,17 @@
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
                 </ul>
-                <span>Reviews (36)</span>
+                <span></span>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/image-4.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-4.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$15.25</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="#"><h4></h4></a>
+                <h6></h6>
+                <p></p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -176,17 +173,17 @@
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
                 </ul>
-                <span>Reviews (48)</span>
+                <span></span>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/image-5.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-5.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$12.50</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="#"><h4></h4></a>
+                <h6></h6>
+                <p></p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -194,17 +191,17 @@
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
                 </ul>
-                <span>Reviews (16)</span>
+                <span></span>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/image-6.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-6.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$22.50</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="#"><h4></h4></a>
+                <h6></h6>
+                <p></p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -212,7 +209,7 @@
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
                 </ul>
-                <span>Reviews (32)</span>
+                <span></span>
               </div>
             </div>
           </div>
@@ -230,16 +227,16 @@
           </div>
           <div class="col-md-6">
             <div class="left-content">
-              <h4>Lorem ipsum dolor sit amet </h4>
-              <p><a rel="nofollow" href="https://www.lldtek.com" target="_parent">Lorem ipsum dolor sit amet </a> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<a rel="nofollow" href="https://www.lldtek.com">Contact Sixteen</a> for more info.</p>
+              <h4>Event Promotion This Month </h4>
+              <p><a rel="nofollow" href="https://www.lldtek.com" target="_parent">Spoil U Nails </a> have 20% off from Monday to Thursday this month</p>
               <ul class="featured-list">
-                <li><a>Mon: 9:00 am - 19:30 pm </a></li>
-                <li><a>Tue: 9:00 am - 19:30 pm </a></li>
-                <li><a>Wed: 9:00 am - 19:30 pm </a></li>
-                <li><a>Thu: 9:00 am - 19:30 pm </a></li>
-                <li><a>Fri: 9:00 am - 19:30 pm </a></li>
-                <li><a>Sat: 9:00 am - 19:30 pm</a></li>
-                <li><a>Sun: 12:00 am - 18:00 pm</a></li>
+                <li><a>Mon: 9:00 am - 7:30 pm </a></li>
+                <li><a>Tue: 9:00 am - 7:30 pm </a></li>
+                <li><a>Wed: 9:00 am - 7:30 pm </a></li>
+                <li><a>Thu: 9:00 am - 7:30 pm </a></li>
+                <li><a>Fri: 9:00 am - 7:30 pm </a></li>
+                <li><a>Sat: 9:00 am - 7:30 pm</a></li>
+                <li><a>Sun: 9:00 am - 6:00 pm</a></li>
               </ul>
               <a href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==" class="filled-button">Booking</a>
             </div>
@@ -262,7 +259,7 @@
               <div class="row">
                 <div class="col-md-8">
                   <h4>GET GIFT CARD</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque corporis amet elite author nulla.</p>
+                  <p>Sign up for our newsletter and get all the latest tips and tricks to polish your nails at a good rate!</p>
                 </div>
                 <div class="col-md-4">
                   <a href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==" class="filled-button">Appointment</a>
