--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           </div>
           <div class="col-md-6">
             <div class="right-image">
-              <img src="assets/images/voucher.jpg" alt="">
+              <img src="assets/images/spoil-u-nails-voucher.jpg" alt="">
             </div>
           </div>
         </div>
