--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-sixteen.css">
     <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="icon" href="assets/images/favicon-spoil-u-nails.svg">
 
   </head>
 
