--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-sixteen.css">
     <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="icon" href="assets/images/favicon-spoil-u-nails.svg">
 
   </head>
 
@@ -59,7 +60,7 @@
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==">Appointment</a>
+                <a target="_blank" class="nav-link" href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==">Appointment</a>
               </li>
             </ul>
           </div>
@@ -106,13 +107,13 @@
               <h4>About Us</h4>
               <p>Spoil U Nails & Spa opens to provide all of you with any nail services you want to have done.<br><br>The main reason we opened our Facebook page is to improve communication with customers and answer any questions y'all have. You guys can message us or make an appointment at any time. We would love to hear from you.</p>
               <ul class="social-icons">
-                <li><a href="https://www.facebook.com/spoilunailsnspa/"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/spoilunailsnspa/"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="https://goo.gl/maps/8Qb6mcEymB1D1Kn49"><i class="fa fa-google"></i></a></li>
+                <li><a target="_blank" href="https://www.facebook.com/spoilunailsnspa/"><i class="fa fa-facebook"></i></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/spoilunailsnspa/"><i class="fa fa-instagram"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a target="_blank" href="https://goo.gl/maps/8Qb6mcEymB1D1Kn49"><i class="fa fa-google"></i></a></li>
               </ul><br><br>
               <div>
-                <a href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==" class="filled-button">Appointment</a>
+                <a target="_blank" href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==" class="filled-button">Appointment</a>
               </div>
             </div>
           </div>
