--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Us</a>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==">Appointment</a>
+                <a target="_blank" class="nav-link" href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==">Appointment</a>
               </li>
             </ul>
           </div>
@@ -239,7 +239,7 @@
                 <li><a>Sat: 9:00 am - 7:30 pm</a></li>
                 <li><a>Sun: 9:00 am - 6:00 pm</a></li>
               </ul>
-              <a href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==" class="filled-button">Booking</a>
+              <a target="_blank" href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==" class="filled-button">Booking</a>
             </div>
           </div>
           <div class="col-md-6">
@@ -263,7 +263,7 @@
                   <p>Sign up for our newsletter and get all the latest tips and tricks to polish your nails at a good rate!</p>
                 </div>
                 <div class="col-md-4">
-                  <a href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==" class="filled-button">Appointment</a>
+                  <a target="_blank" href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==" class="filled-button">Appointment</a>
                 </div>
               </div>
             </div>
@@ -285,10 +285,10 @@
               <div class="col-md-12">
                 <div class="center-content">
                   <ul class="social-icons">
-                    <li><a href="https://www.facebook.com/spoilunailsnspa/"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="https://www.instagram.com/spoilunailsnspa/"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://goo.gl/maps/8Qb6mcEymB1D1Kn49"><i class="fa fa-google"></i></a></li>
+                    <li><a target="_blank" href="https://www.facebook.com/spoilunailsnspa/"><i class="fa fa-facebook"></i></a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/spoilunailsnspa/"><i class="fa fa-instagram"></i></a></li>
+                    <li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a target="_blank" href="https://goo.gl/maps/8Qb6mcEymB1D1Kn49"><i class="fa fa-google"></i></a></li>
                   </ul>
                 </div>
           </div>
