--- a/products.html
+++ b/products.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-sixteen.css">
     <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="icon" href="assets/images/favicon-spoil-u-nails.svg">
 
   </head>
 
@@ -57,7 +58,7 @@
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==">Appointment</a>
+                <a target="_blank" target="_blank" class="nav-link" href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==">Appointment</a>
               </li>
             </ul>
           </div>
