--- a/about.html
+++ b/about.html
@@ -99,10 +99,10 @@
               <h4>Who we are &amp; What we do?</h4>
               <p>Spoil U Nails & Spa opens to provide all of you with any nail services you want to have done.<br><br>The main reason we opened our Facebook page is to improve communication with customers and answer any questions y'all have. You guys can message us or make an appointment at any time. We would love to hear from you.</p>
               <ul class="social-icons">
-                <li><a href="https://www.facebook.com/spoilunailsnspa/"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/spoilunailsnspa/"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/spoilunailsnspa/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/spoilunailsnspa/" target="_blank"><i class="fa fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="https://goo.gl/maps/8Qb6mcEymB1D1Kn49"><i class="fa fa-google"></i></a></li>
+                <li><a href="https://goo.gl/maps/8Qb6mcEymB1D1Kn49" target="_blank"><i class="fa fa-google"></i></a></li>
               </ul>
             </div>
           </div>
@@ -300,7 +300,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright &copy; 2022 Spoil U Nails & Spa- Dev by <a rel="nofollow noopener" href="https://www.lldtek.com" target="_blank">LLDTEK</a></p>
+              <p>Copyright &copy; 2022 Spoil U Nails & Spa - Dev by <a rel="nofollow noopener" href="https://www.lldtek.com" target="_blank">LLDTEK</a></p>
             </div>
           </div>
         </div>
