--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,9 @@
                   </div>
                   <div class="col-lg-12">
                     <fieldset>
-                      <button type="submit" id="form-submit" class="filled-button">Send Message</button>
+                      <a href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==" target="_blank">
+                        <button type="button" id="form-submit" class="filled-button">Send Message</button>
+                      </a>
                     </fieldset>
                   </div>
                 </div>
@@ -213,7 +215,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright &copy; 2022 Spoil U Nails & Spa- Dev by <a rel="nofollow noopener" href="https://www.lldtek.com" target="_blank">LLDTEK</a></p>
+              <p>Copyright &copy; 2022 Spoil U Nails & Spa - Dev by <a rel="nofollow noopener" href="https://www.lldtek.com" target="_blank">LLDTEK</a></p>
             </div>
           </div>
         </div>
