--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
               <h4>Event Promotion This Month </h4>
               <p><a rel="nofollow" href="https://www.lldtek.com" target="_parent">Spoil U Nails </a> have 20% off from Monday to Thursday this month</p>
               <ul class="featured-list">
-                <li><a>Mon: 9:00 am - 7:30 pm </a></li>
-                <li><a>Tue: 9:00 am - 7:30 pm </a></li>
-                <li><a>Wed: 9:00 am - 7:30 pm </a></li>
-                <li><a>Thu: 9:00 am - 7:30 pm </a></li>
-                <li><a>Fri: 9:00 am - 7:30 pm </a></li>
-                <li><a>Sat: 9:00 am - 7:30 pm</a></li>
-                <li><a>Sun: 9:00 am - 6:00 pm</a></li>
+                <li><a><span class="left-column-day">Mon: </span> 9:00 am - 7:30 pm</a></li>
+                <li><a><span class="left-column-day">Tue: </span> 9:00 am - 7:30 pm</a></li>
+                <li><a><span class="left-column-day">Wed: </span> 9:00 am - 7:30 pm</a></li>
+                <li><a><span class="left-column-day">Thu: </span> 9:00 am - 7:30 pm</a></li>
+                <li><a><span class="left-column-day">Fri: </span> 9:00 am - 7:30 pm</a></li>
+                <li><a><span class="left-column-day">Sat: </span> 9:00 am - 7:30 pm</a></li>
+                <li><a><span class="left-column-day">Sun: </span> 9:00 am - 6:00 pm</a></li>
               </ul>
               <a target="_blank" href="https://www.lldtek.com/salon/appt/MzMzMjN8c3BvaWx1MTE1NXxBUl8wNzE1N3w3ODg1NWU2YzhjY2M0MTExMWM5ZjQyYjllNDI1ZjgxYg==" class="filled-button">Booking</a>
             </div>
@@ -280,7 +280,7 @@
               <p>Address: 1155 West Martin Luther King Boulevard Fayetteville <br>
                 Arkansas, Arkansas, Hoa Kỳ 72701 <br>       
                 Tel: +1 479-521-5202 <br><br>
-                Copyright &copy; 2022 Spoil U Nails & Spa- Dev by<a rel="nofollow noopener" href="https://www.lldtek.com" target="_blank">LLDTEK</a><br>
+                Copyright &copy; 2022 Spoil U Nails & Spa - Dev by<a rel="nofollow noopener" href="https://www.lldtek.com" target="_blank">LLDTEK</a><br>
               </p><br>
               <div class="col-md-12">
                 <div class="center-content">
@@ -322,9 +322,6 @@
           }
       }
     </script>
-    <script src="layout/scripts/jquery.min.js"></script>
-    <script src="layout/scripts/jquery.backtotop.js"></script>
-    <script src="layout/scripts/jquery.mobilemenu.js"></script>
 
 
   </body>
