--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <div class="col-md-6">
             <div class="left-content">
               <h4>Event Promotion This Month </h4>
-              <p><a rel="nofollow" href="https://www.lldtek.com" target="_parent">Spoil U Nails </a> have 20% off from Monday to Thursday this month</p>
+              <p><a rel="nofollow" href="https://www.lldtek.com" target="_parent">Spoil U Nails </a> have 10% off Monday to Thursday from 9:00 AM - 11:00 AM</p>
               <ul class="featured-list">
                 <li><a><span class="left-column-day">Mon: </span> 9:00 am - 7:30 pm</a></li>
                 <li><a><span class="left-column-day">Tue: </span> 9:00 am - 7:30 pm</a></li>
