--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
           <div class="col-md-12">
             <div class="inner-content">
               <p>Address: 1155 West Martin Luther King Boulevard Fayetteville <br>
-                Arkansas, Arkansas, Hoa Kỳ 72701 <br>       
+                Arkansas, AR 72701 <br>       
                 Tel: +1 479-521-5202 <br><br>
                 Copyright &copy; 2022 Spoil U Nails & Spa - Dev by<a rel="nofollow noopener" href="https://www.lldtek.com" target="_blank">LLDTEK</a><br>
               </p><br>
